src/objects/Test_Snap_shot__c.object
<CustomObject>
    <description>Used by Finance for final month end numbers</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Briefing Sponsor</fullName>
                </value>
                <value>
                    <fullName>Win Back Customer</fullName>
                </value>
                <value>
                    <fullName>Customer - Strategic Account</fullName>
                </value>
                <value>
                    <fullName>Customer - Quarterly Membership</fullName>
                </value>
                <value>
                    <fullName>Customer - Consulting</fullName>
                </value>
                <value>
                    <fullName>Customer - Custom Export/Report</fullName>
                </value>
                <value>
                    <fullName>Customer - Database Access</fullName>
                </value>
                <value>
                    <fullName>Customer - Web Account</fullName>
                </value>
                <value>
                    <fullName>Customer - Multiple Purchase types</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
                <value>
                    <fullName>Duplicate - pls. merge with original</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNTING FIRMS</fullName>
                </value>
                <value>
                    <fullName>ADVERTISING</fullName>
                </value>
                <value>
                    <fullName>APPLIANCE COMPANY</fullName>
                </value>
                <value>
                    <fullName>APPRAISER</fullName>
                </value>
                <value>
                    <fullName>APARTMENT MANAGER</fullName>
                </value>
                <value>
                    <fullName>APARTMENT OWNERS</fullName>
                </value>
                <value>
                    <fullName>ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>BUILDING INDUSTRY ASSOCIATION AND COUNCIL</fullName>
                </value>
                <value>
                    <fullName>ATTORNEY</fullName>
                </value>
                <value>
                    <fullName>BUILDERS</fullName>
                </value>
                <value>
                    <fullName>OTHER BUILDING PRODUCT MANUFACTURERS</fullName>
                </value>
                <value>
                    <fullName>LAND BROKER</fullName>
                </value>
                <value>
                    <fullName>CABINETS</fullName>
                </value>
                <value>
                    <fullName>RESEARCH CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>DOORS MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL</fullName>
                </value>
                <value>
                    <fullName>ENGINEER</fullName>
                </value>
                <value>
                    <fullName>FAUCET MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>FLOORING MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT/CITY/COUNTY</fullName>
                </value>
                <value>
                    <fullName>HEATING, VENILATION, AIR CONDITIONING</fullName>
                </value>
                <value>
                    <fullName>HANLEY WOOD</fullName>
                </value>
                <value>
                    <fullName>INSULATION</fullName>
                </value>
                <value>
                    <fullName>INTERIOR DESIGNER</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT BANKER (EQUITY)</fullName>
                </value>
                <value>
                    <fullName>LENDER/BANK</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>OTHER INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>MORTGAGE COMPANY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <description>timestamp</description>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>One_time_Sale_Type__c</fullName>
        <label>One-time Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting/Engagement</fullName>
                </value>
                <value>
                    <fullName>Custom Export/Report</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Claritas</fullName>
                </value>
                <value>
                    <fullName>Internet Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Briefing Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <label>Opp Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription/Membership</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reconciled_by_Acctg__c</fullName>
        <description>Populates if accounting has all necessary documentation to book the rev in that month</description>
        <label>Reconciled by Acctg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_DBD__c</fullName>
        <label>Referring DBD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Booking mapping SFDC to Finance</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Central/Northern FL</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>IL/WI/IN/MO/IA/KY/OH</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Maryland/Northern VA/DC</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>National - BPM</fullName>
                </value>
                <value>
                    <fullName>Northern CA</fullName>
                </value>
                <value>
                    <fullName>NY/NJ/PA/DE</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Phoenix/Tucson/Prescott</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southern CA</fullName>
                </value>
                <value>
                    <fullName>Southern FL</fullName>
                </value>
                <value>
                    <fullName>Tampa/Sarasota</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Washington/Oregon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Opportunity</fullName>
                </value>
                <value>
                    <fullName>Prospect Engaged</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Budget Qualification</fullName>
                </value>
                <value>
                    <fullName>Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Technically Selected</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Final Signature</fullName>
                </value>
                <value>
                    <fullName>In Purchasing</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Lost/Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Duplicate; pls. delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Month End Audit Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Reconciled_by_Acctg__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Month End Audit Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>